# vcpkg_cmake_sdl2_docker_cpp

./: CMakeLists.txt  Dockerfile  Readme.md  board.cpp  board.h  docker-compose.yml  entity.cpp  entity.h  game.cpp  game.h  ghost.cpp  ghost.h  main.cpp  player.cpp  player.h  primitives.cpp  primitives.h
.devcontainer/: devcontainer.json
